--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,8 @@
       </div>
     </aside>
 
-    <script src="ParkingSpot.js"></script>
+    <script src="/ParkingSpot.js?v=sync-1" defer></script>
+
   </body>
 </html>
+
