--- a/public/index.html
+++ b/public/index.html
@@ -61,8 +61,9 @@
       </div>
     </aside>
 
-    <script src="/ParkingSpot.js?v=sync-1" defer></script>
+<script src="/app.js?v=sync-4" defer></script>
 
   </body>
 </html>
+
 
