--- a/public/index.html
+++ b/public/index.html
@@ -61,9 +61,10 @@
       </div>
     </aside>
 
-<script src="/app.js?v=sync-4" defer></script>
+<script src="/ParkingSpot.js?v=sync-4" defer></script>
 
   </body>
 </html>
+
 
 
