feat: add versioned sync with offline fallback

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div id="offline-banner" style="display:none; background:#fcc; color:#900; padding:8px; text-align:center;">You're in local-only mode (not synced)</div>
     <div class="zoom-controls">
        <button id="zoom-in-btn">➕</button>
        <button id="zoom-out-btn">➖</button>
